Completed both mobile and large screen size styles

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ p{
 
 /*Section A*/
 
-#sction-a{
+#section-a{
     padding-bottom: 1em;
     background: #eaeaea;
     color: #000;
@@ -131,6 +131,8 @@ p{
     background: #000;
     padding: 2em;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #main-footer ul{
@@ -139,3 +141,43 @@ p{
     list-style: none;
     padding-top: 1em;
 }
+
+
+/*Media Qurie*/
+
+@media (min-width: 700px) {
+    .grid{
+        display: grid;
+        grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+        
+    }
+    
+    #section-a .content-text{
+        columns: 2;
+        column-gap: 2em;
+    }
+    
+    #section-a .content-text p{
+        padding-top: 0;
+    }
+    
+    .content-wrap,
+    #section-b ul{
+        grid-column: 2/4;
+    }
+    
+    .box, #main-footer div{
+        grid-column: span 2;
+    }
+    
+    #section-b ul{
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    #section-b li{
+        width: 31%;
+    }
+}
+
+
