--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ p{
 
 /*Media Qurie*/
 
-@media (min-width: 700px) {
+@media (max-width: 700px) {
     .grid{
         display: grid;
         grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
