--- a/style.css
+++ b/style.css
@@ -57,13 +57,13 @@ p{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 450px;
+    height: 700px;
     z-index: -1;
     opacity: 0.4;
 }
 
 #header-showcase h1{
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 25px 0;
 }
 
@@ -140,6 +140,7 @@ p{
     justify-content: space-around;
     list-style: none;
     padding-top: 1em;
+    padding-left: 0;
 }
 
 
@@ -156,8 +157,8 @@ p{
         column-gap: 2em;
     }
     
-    #section-a .context-text p{
-        padding-top: 0;
+    #section-a .content-text p{
+        padding: 0em;
     }
     
     .content-wrap,
